--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^7.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-scroll": "^1.7.10",
     "styled-components": "^4.1.2",
     "styled-media-query": "^2.0.2"
   }
