--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "deploy": "yarn export && netlify deploy --dir=out --prod"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.9.4",
     "next": "^7.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scroll": "^1.7.10",
     "styled-components": "^4.1.2",
     "styled-media-query": "^2.0.2"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.9.4"
   }
 }
