--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scroll": "^1.7.10",
-    "styled-components": "^4.1.2",
-    "styled-media-query": "^2.0.2"
+    "react-slick": "^0.23.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^4.1.3",
+    "styled-media-query": "^2.1.1",
+    "typed.js": "^2.0.9"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.9.4"
+    "@zeit/next-css": "^1.0.1",
+    "babel-plugin-styled-components": "^1.10.0"
   }
 }
